# ga_lib_rust

./: .gitignore  Cargo.toml  README.org  flake.nix
.cargo/: config.toml
benches/: benchmark.rs
src/: lib.rs  macros.rs
src/pga3d/: mod.rs
src/vga3d/: addition.rs  bivector.rs  exterior.rs  functions.rs  geometric.rs  inner.rs  mod.rs  multivector.rs  regressive.rs  rotor.rs  scalar.rs  subtraction.rs  trivector.rs  vector.rs
src/vga3d/quaternion/: mod.rs  quaternion.rs  unit_quaternion.rs
src/vga_3d/: addition.rs  bivector.rs  exterior.rs  functions.rs  geometric.rs  inner.rs  mod.rs  multivector.rs  regressive.rs  rotor.rs  subtraction.rs  trivector.rs  vector.rs
