[package]
name = "ga_lib"
version = "0.1.0"
edition = "2024"
authors = [ "Rasmus Enevoldsen" ]
readme = "README.org"
license = "LGPL-3.0-or-later"

[dependencies]
libm = {version = "0.2.11"} # math lib for embedded
approx = {version = "0.5.1"} # approx test for floats
nalgebra = { version = "0.33.2", optional = true }
defmt = {version = "1.0.1", optional= true}

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
nalgebra = { version = "0.33.2" }

[[bench]]
name = "benchmark"
harness = false


[features]
default = []
quaternion = []
std = []
nalgebra = ["dep:nalgebra"]
defmt = ["dep:defmt"]
full = ["nalgebra", "quaternion", "std"]


[package.metadata.docs.rs]
rustdoc-args = [
"--html-in-header", "./katex-header.html"
]
